# lab05

./: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
.github/workflows/: main.cpp  main.yml
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  check[1]_include.cmake  cmake_install.cmake  test_executable
_build/Testing/Temporary/: CTestCostData.txt
tests/: print.cpp  print.hpp  test1.cpp
